--- a/style.css
+++ b/style.css
@@ -1,10 +1,21 @@
 body {
   background-color: khaki;
   font-size: 24px;
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  align-items: center;
+  gap: 10vh;
+}
+#headers {
+  text-align: center;
+  color: saddlebrown;
 }
 #recipes {
   display: flex;
   flex-direction: column;
+  font-size: 72px;
+  gap: 10vh;
 }
 a {
   text-decoration-line: none;
